@@ -17,7 +17,7 @@ $Id$
 """
 import doctest
 import unittest
-from zope.testing.doctestunit import DocTestSuite
+from zope.testing.doctest import DocTestSuite
 
 def test_suite():
     return unittest.TestSuite((
